add computation of boundary matrix with real coefficients temporarily removed persistence and standard flagser build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 
 project(flagser)
 
@@ -45,34 +45,41 @@ add_custom_command(
 add_custom_target(generate_custom_algorithms DEPENDS include/algorithms.h)
 
 
-add_executable(flagser src/flagser.cpp include/algorithms.h)
-add_dependencies(flagser generate_custom_algorithms)
-set_target_properties(flagser PROPERTIES LINKER_LANGUAGE CXX)
+# add_executable(flagser src/flagser.cpp include/algorithms.h)
+# add_dependencies(flagser generate_custom_algorithms)
+# set_target_properties(flagser PROPERTIES LINKER_LANGUAGE CXX)
 
-add_executable(flagser_retrieve_persistence src/flagser.cpp include/algorithms.h)
-add_dependencies(flagser_retrieve_persistence generate_custom_algorithms)
-target_compile_definitions(flagser_retrieve_persistence PRIVATE RETRIEVE_PERSISTENCE)
-set_target_properties(flagser_retrieve_persistence PROPERTIES LINKER_LANGUAGE CXX)
+# add_executable(flagser_retrieve_persistence src/flagser.cpp include/algorithms.h)
+# add_dependencies(flagser_retrieve_persistence generate_custom_algorithms)
+# target_compile_definitions(flagser_retrieve_persistence PRIVATE RETRIEVE_PERSISTENCE)
+# set_target_properties(flagser_retrieve_persistence PROPERTIES LINKER_LANGUAGE CXX)
 
 
-add_executable(ripser src/ripser.cpp)
-set_target_properties(ripser PROPERTIES LINKER_LANGUAGE CXX)
+# add_executable(ripser src/ripser.cpp)
+# set_target_properties(ripser PROPERTIES LINKER_LANGUAGE CXX)
 
-add_executable(flagser-count src/flagser-count.cpp)
-set_target_properties(flagser-count PROPERTIES LINKER_LANGUAGE CXX)
+# add_executable(flagser-count src/flagser-count.cpp)
+# set_target_properties(flagser-count PROPERTIES LINKER_LANGUAGE CXX)
 
-add_executable(er src/er.cpp)
-set_target_properties(er PROPERTIES LINKER_LANGUAGE CXX)
+# add_executable(er src/er.cpp)
+# set_target_properties(er PROPERTIES LINKER_LANGUAGE CXX)
 
 IF(NOT MSVC)
-add_executable(flagser-coefficients src/flagser.cpp)
-add_dependencies(flagser-coefficients generate_custom_algorithms)
-target_compile_definitions(flagser-coefficients PRIVATE USE_COEFFICIENTS=1)
-set_target_properties(flagser-coefficients PROPERTIES LINKER_LANGUAGE CXX)
+# add_executable(flagser-coefficients src/flagser.cpp)
+# add_dependencies(flagser-coefficients generate_custom_algorithms)
+# target_compile_definitions(flagser-coefficients PRIVATE USE_COEFFICIENTS=1)
+# set_target_properties(flagser-coefficients PROPERTIES LINKER_LANGUAGE CXX)
 
-add_executable(ripser-coefficients src/ripser.cpp)
-target_compile_definitions(ripser-coefficients PRIVATE USE_COEFFICIENTS=1)
-set_target_properties(ripser-coefficients PROPERTIES LINKER_LANGUAGE CXX)
+# add_executable(ripser-coefficients src/ripser.cpp)
+# target_compile_definitions(ripser-coefficients PRIVATE USE_COEFFICIENTS=1)
+# set_target_properties(ripser-coefficients PROPERTIES LINKER_LANGUAGE CXX)
+
+# Ben Jones 2023-03-01 for flagser-real
+add_executable(flagser-real src/flagser-laplacian.cpp)
+add_dependencies(flagser-real generate_custom_algorithms)
+target_compile_definitions(flagser-real PRIVATE USE_COEFFICIENTS=1 REAL_COEFFICIENTS=1)
+set_target_properties(flagser-real PROPERTIES LINKER_LANGUAGE CXX)
+
 ELSE()
   message("On Windows, compilation with coefficients is currently not supported.")
 ENDIF()
@@ -86,49 +93,55 @@ message("** CMAKE_CXX_LINK_FLAGS: \t\t${CMAKE_CXX_LINK_FLAGS}")
 message("")
 
 IF(HDF5_FOUND)
-TARGET_LINK_LIBRARIES(flagser ${HDF5_LIBRARIES} pthread)
-TARGET_LINK_LIBRARIES(flagser_retrieve_persistence ${HDF5_LIBRARIES} pthread)
-TARGET_LINK_LIBRARIES(flagser-count ${HDF5_LIBRARIES} pthread)
-TARGET_LINK_LIBRARIES(er ${HDF5_LIBRARIES} pthread)
-TARGET_LINK_LIBRARIES(ripser ${HDF5_LIBRARIES} pthread)
+# TARGET_LINK_LIBRARIES(flagser ${HDF5_LIBRARIES} pthread)
+# TARGET_LINK_LIBRARIES(flagser_retrieve_persistence ${HDF5_LIBRARIES} pthread)
+# TARGET_LINK_LIBRARIES(flagser-count ${HDF5_LIBRARIES} pthread)
+# TARGET_LINK_LIBRARIES(er ${HDF5_LIBRARIES} pthread)
+# TARGET_LINK_LIBRARIES(ripser ${HDF5_LIBRARIES} pthread)
 IF(NOT MSVC)
-TARGET_LINK_LIBRARIES(ripser-coefficients ${HDF5_LIBRARIES} pthread)
-TARGET_LINK_LIBRARIES(flagser-coefficients ${HDF5_LIBRARIES} pthread)
+# TARGET_LINK_LIBRARIES(ripser-coefficients ${HDF5_LIBRARIES} pthread)
+# TARGET_LINK_LIBRARIES(flagser-coefficients ${HDF5_LIBRARIES} pthread)
+TARGET_LINK_LIBRARIES(flagser-real ${HDF5_LIBRARIES} pthread) # Ben Jones 2023-03-01
 ENDIF()
 ENDIF()
 
 IF(NOT MSVC)
-install(TARGETS flagser flagser-coefficients flagser-count RUNTIME DESTINATION bin)
+install(TARGETS flagser-real RUNTIME DESTINATION bin) # add flagser-real?
+# install(TARGETS flagser flagser-coefficients flagser-count flagser-real RUNTIME DESTINATION bin) # add flagser-real?
 ELSE()
 install(TARGETS flagser flagser-count RUNTIME DESTINATION bin)
 ENDIF()
 
-add_custom_command(
-    TARGET flagser POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:flagser> ${CMAKE_SOURCE_DIR})
-add_custom_command(
-    TARGET flagser_retrieve_persistence POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:flagser_retrieve_persistence> ${CMAKE_SOURCE_DIR})
-add_custom_command(
-    TARGET flagser-count POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:flagser-count> ${CMAKE_SOURCE_DIR})
-add_custom_command(
-    TARGET ripser POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:ripser> ${CMAKE_SOURCE_DIR})
-add_custom_command(
-    TARGET er POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:er> ${CMAKE_SOURCE_DIR}/tools)
+# add_custom_command(
+#     TARGET flagser POST_BUILD
+#     COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:flagser> ${CMAKE_SOURCE_DIR})
+# add_custom_command(
+#     TARGET flagser_retrieve_persistence POST_BUILD
+#     COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:flagser_retrieve_persistence> ${CMAKE_SOURCE_DIR})
+# add_custom_command(
+#     TARGET flagser-count POST_BUILD
+#     COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:flagser-count> ${CMAKE_SOURCE_DIR})
+# add_custom_command(
+#     TARGET ripser POST_BUILD
+#     COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:ripser> ${CMAKE_SOURCE_DIR})
+# add_custom_command(
+#     TARGET er POST_BUILD
+#     COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:er> ${CMAKE_SOURCE_DIR}/tools)
 IF(NOT MSVC)
-add_custom_command(
-    TARGET flagser-coefficients POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:flagser-coefficients> ${CMAKE_SOURCE_DIR})
-add_custom_command(
-    TARGET ripser-coefficients POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:ripser-coefficients> ${CMAKE_SOURCE_DIR})
+# add_custom_command(
+#     TARGET flagser-coefficients POST_BUILD
+#     COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:flagser-coefficients> ${CMAKE_SOURCE_DIR})
+# add_custom_command(
+#     TARGET ripser-coefficients POST_BUILD
+#     COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:ripser-coefficients> ${CMAKE_SOURCE_DIR})
+add_custom_command( # Ben Jones 2023-03-01
+        TARGET flagser-real POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:flagser-real> ${CMAKE_SOURCE_DIR})
+
 ENDIF()
 
-if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-    include(CTest)
-    add_subdirectory(test)
-    enable_testing()
-endif()
+# if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+#     include(CTest)
+#     add_subdirectory(test)
+#     enable_testing()
+# endif()
